4.8.0.6

- Runtime system
  - The scheduler won't poll() on non-FD objects upon which threads are blocked.

- Core libraries
  - Export file-type from the posix unit (thanks to Alan Post).

4.8.0.5

- Security fixes
  - CVE-2013-4385: read-string! no longer reads beyond its buffer when
    length is #f.
  - poll() is also used on cygwin by enabling the fix for CVE-2012-6122
  - file-creation-mode now passes a valid value to umask when its argument 
    is omitted.  (Also ensure it always returns the old umask value.)
  - Fix a data corruption problem in list->queue.

- Core libraries
  - read-string! behaves correctly in presence of EOF.
  - Several subtle problems in the reader in the presence of EOF are fixed.
  - Use poll() instead of select() on cygwin.

- Runtime
  - Fix an issue on initial seed of the random number generator.

4.8.0.4

- Runtime
  - Ensure correct type is used for sigsetjmp(3) buffer.  This fixes,
    for example, a bus error in 32-bit OS X builds (#1021).

- Core libraries
  - Export file-type from the posix unit.

- Build system
  - Use inexact comparison for flonum tests, as there is sometimes a
    miniscule difference between trig functions computed by libc and
    those precalculated by gcc.

4.8.0.3

- Runtime
  - Avoid high CPU usage when waiting for child process I/O with poll().
    Affects at least Linux and Solaris.
  - Escape single backslash in printed symbols.

- Type system
  - Fixed types.db entry for join and mutex-lock!

- Core tools
 - chicken-install transports now parses ports on URIs with empty paths

4.8.0.2

- Interpreter
  - Fix regression in ,d for procedures, which resulted in an sprintf error.

- Compiler
  - Fix rewriting of newlines (~~) in printf.

- Runtime
  - Allow > 4GB heap on 64-bit systems (#974).
  - Added missing library (-lrt) on Solaris for nanosleep calls (#970).

- Build system
  - Use test -f instead of test -e in identify.sh to placate Solaris.

4.8.0.1

- Security fixes