@@ -31,3 +31,9 @@
 (assert-error (process-execute "false\x00123"))
 (assert-error (process-execute "false" '("1" "123\x00456")))
 (assert-error (process-execute "false" '("123\x00456") '("foo\x00bar" "blabla") '("lalala" "qux\x00mooh")))
+
+;; unsetenv
+(setenv "FOO" "bar")
+(assert (equal? (get-environment-variable "FOO") "bar"))
+(unsetenv "FOO")
+(assert (not (get-environment-variable "FOO")))
